--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Generador solicitud cremacion</title>
+    <title>Generador de solicitud </title>
     <link rel="stylesheet" href="styles.css">
 
 </head>
 <body>
     <div class="container">
-      <h1>Crear solicitud Cremacion</h1>
+      <h1>Crear solicitud </h1>
       <br>
       <form class="form" onsubmit="event.preventDefault();">
         <label for="legajo">Legajo:</label>
