--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Generador de solicitud </title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 
 </head>
 <body>
@@ -70,8 +70,8 @@
       </form>
     </div>
   
-    <script type="text/javascript" src="app.js"></script>
-    <script type="text/javascript" src="jspdf.min.js"></script>
+    <script type="text/javascript" src="js/app.js"></script>
+    <script type="text/javascript" src="js/jspdf.min.js"></script>
   </body>
   </html>
 
