--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 </head>
 <body>
     <div class="container">      
-      
       <form class="form" onsubmit="event.preventDefault();">
         <div class="container">
           <div class="row">
@@ -85,18 +84,14 @@
                   </div>
               </div>
           </div>
-          
-          <div class="row mt-3">
-              <div class="col-md-12">
-                  <button type="button" class="btn btn-primary" onclick="validarFormulario()">Generar PDF</button>
-              </div>
-          </div>
-      </div>
+
+        <button type="button" onclick="validarFormulario()">Generar PDF</button>
       </form>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+  
     <script type="text/javascript" src="js/app.js"></script>
     <script type="text/javascript" src="js/jspdf.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
   </body>
   </html>
 
