Se agrega placeholder

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
                             <div class="card-body">
                                 <h3>Cabecera</h3>
                                 <label for="legajo">Legajo:</label>
-                                <input type="text" id="legajo" class="form-control"  autofocus required>
+                                <input type="text" id="legajo" class="form-control"   placeholder="Ej: 325/23"  autofocus required>
                                 
                                 <label for="expediente">Expediente:</label>
                                 <input type="text" id="expediente" class="form-control" required>
                                 
-                                <label for="oficinaFiscal">Oficina Fiscal:</label>
-                                <input type="text" id="oficinaFiscal" class="form-control" required>
+                                <label for="oficinaFiscal">Tribunal:</label>
+                                <input type="text" id="oficinaFiscal" class="form-control" required placeholder="Ej: Oficina Fiscal N°">
                             </div>
                         </div>
                     </div>
